--- a/project.json
+++ b/project.json
@@ -12,6 +12,15 @@
 				"recurse": "${appPath}/PokittoLib/Pokitto",
 				"ignore": "POKITTO_SIM|POKITTO_XTERNALS|Documentation|examples?|Physics|(?:.*_SIM.*)|main.cpp"
 			}
+		],
+		"linux": "Desktop",
+		"windows": "Desktop",
+		"darwin": "Desktop",
+		"Desktop": [
+			{
+				"recurse": "${appPath}/PokittoLib/Pokitto",
+				"ignore": "BmpImage.cpp|ChaN|old_32bitSDL|libpff|SDFileSystem|File/ChaN|USBDevice|tinydir/tests|tinydir/samples|JoyHat|mbed-pokitto|POKITTO_HW|POKITTO_XTERNALS|PokittoDisk.cpp|PokittoBattery.cpp|Documentation|examples?|Physics|main.cpp|Pokitto_simsound.cpp"
+			}
 		]
 	},
 	"SFlags": {
@@ -84,11 +93,14 @@
 		],
 		"Desktop": [
 			"-I${projectPath}",
-			"-DDESKTOP",
+			"-DPOK_SIM",
+			"-Wall",
+			"-std=gnu++17",
+			"-fsigned-char",
+			"-DPOK_SIM",
 			"-fno-rtti",
 			"-Wno-pointer-arith",
 			"-c",
-			"-fno-exceptions",
 			"-fno-builtin",
 			"-ffunction-sections",
 			"-fdata-sections",
@@ -98,7 +110,15 @@
 		],
 		"ALL": [
 			"-std=c++17"
-		]
+		],
+		"linux": {
+			"extend": "Desktop",
+			"flags": [
+				"-DPROJ_LINUX=1",
+				"-D_REENTRANT"
+			]
+		},
+		"windows": "Desktop"
 	},
 	"CFlags": {
 		"DEBUG": [
@@ -159,11 +179,12 @@
 		],
 		"Desktop": [
 			"-I${projectPath}",
-			"-DDESKTOP",
-			"-fno-rtti",
+			"-DPOK_SIM",
+			"-Wall",
+			"-fsigned-char",
+			"-DPOK_SIM",
 			"-Wno-pointer-arith",
 			"-c",
-			"-fno-exceptions",
 			"-fno-builtin",
 			"-ffunction-sections",
 			"-fdata-sections",
@@ -171,7 +192,10 @@
 			"-MMD",
 			"-fno-delete-null-pointer-checks"
 		],
-		"ALL": []
+		"ALL": [],
+		"linux": "Desktop",
+		"windows": "Desktop",
+		"darwin": "Desktop"
 	},
 	"GDBFlags": {
 		"Pokitto": [
@@ -221,6 +245,39 @@
 			"-lgcc",
 			"-lnosys",
 			"-Wl,--end-group"
+		],
+		"linux": [
+			"$objectFiles",
+			"-lpthread",
+			"-lSDL2",
+			"--output",
+			"${projectPath}/${projectName}"
+		],
+		"windows": [
+			"-static",
+			"-lmingw32",
+			"-L${appPath}/PokittoLib/Pokitto/POKITTO_SIM/SDL2/lib",
+			"-lSDL2main",
+			"-lSDL2",
+			"-lm",
+			"-ldinput8",
+			"-ldxguid",
+			"-ldxerr8",
+			"-luser32",
+			"-lgdi32",
+			"-lwinmm",
+			"-limm32",
+			"-lole32",
+			"-loleaut32",
+			"-lshell32",
+			"-lversion",
+			"-luuid",
+			"-lsetupapi",
+			"-static-libgcc",
+			"-mwindows",
+			"--output",
+			"${projectPath}/${projectName}.exe",
+			"$objectFiles"
 		]
 	},
 	"target": "Pokitto",
@@ -233,10 +290,12 @@
 			"make-img"
 		],
 		"Desktop": [
+			"img-to-c",
 			"compile-cpp",
-			"compile-ld",
-			"compile-bin"
-		]
+			"compile-ld"
+		],
+		"linux": "Desktop",
+		"windows": "Desktop"
 	},
 	"meta": {
 		"": {},
@@ -9536,9 +9595,16 @@
 		},
 		"\\project.json.bak": {
 			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto - Copy.elf": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto - Copy.eeprom": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
 		"Pokitto": {}
-	}
+	},
+	"ideVersion": 10000
 }
