--- a/project.json
+++ b/project.json
@@ -9601,6 +9601,81 @@
 		},
 		"\\RogueBoy_Pokitto - Copy.eeprom": {
 			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_41.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_42.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_43.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_44.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_45.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_41.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_42.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_43.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_44.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_45.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_45 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_41 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_42 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_43 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_44 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_45 - Copy.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_41 - Copy.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_42 - Copy.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_43 - Copy.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_44 - Copy.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_45 - Copy - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_41 - Copy - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_42 - Copy - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_43 - Copy - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\Pico8_44 - Copy - Copy.png": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
