--- a/project.json
+++ b/project.json
@@ -10130,484 +10130,58 @@
 		"\\src\\images\\enemies\\bull\\Bull_Dust_06_F0.h": {
 			"sdcard": false
 		},
-		"/RogueBoy_Pokitto.bin.6.png": {
+		"\\xxx.gif": {
 			"sdcard": false
 		},
-		"/RogueBoy_Pokitto.bin.6.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F0.png": {
 			"sdcard": false
 		},
-		"/RogueBoy_Pokitto.bin.7.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F1.png": {
 			"sdcard": false
 		},
-		"/RogueBoy_Pokitto.bin.7.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F2.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_00.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F0 - Copy.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_00.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F3.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_01.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F3 - Copy.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_01.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F4.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_02.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F0.h": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_02.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F1.h": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_03.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F2.h": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_04.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F3.h": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_03.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F4.h": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_04.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F6.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_05.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F7.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_05.png": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F4 - Copy.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_06.h": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F5.png": {
 			"sdcard": false
 		},
-		"/src/images/bullets/Spark_06.png": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_07.h": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_08.h": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_07.png": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_09.h": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_08.png": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_09.png": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_10.h": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_10.png": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_11.h": {
-			"sdcard": false
-		},
-		"/src/images/bullets/Spark_11.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_42.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_42.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_44.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_44.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_45.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Pico8_45.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_41.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_42.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_41.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_42.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_43.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_43.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_44.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_44.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_45.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/Backup/Pico8_45.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_00_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_00_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_00_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_02_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_02_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_00_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_02_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_02_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_04_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_04_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_04_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_04_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_06_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_06_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_06_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_06_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_00_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_00_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_00_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_00_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_01_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_01_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_01_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_01_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_02_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_02_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_02_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_03_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_02_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_03_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_03_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_03_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_04_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_04_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_04_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_04_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_05_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_05_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_05_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_06_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_05_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_06_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_06_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_06_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_07_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_07_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_07_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_00_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_00_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Dust_07_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_00_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_02_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_02_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_00_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_02_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_02_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_04_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_04_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_04_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_04_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_06_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_06_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_06_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/bull/Bull_Stamping_06_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_00_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_00_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_00_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_02_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_00_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_02_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_02_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_02_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_04_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_04_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_04_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_04_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_06_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_06_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_06_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_06_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F2.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_00_F2.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F2.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_02_F2.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F2.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_04_F2.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F0.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F0.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F1.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F1.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F2.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Hitting_06_F2.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_00.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_00.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_01.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_01.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_02.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_03.h": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_02.png": {
-			"sdcard": false
-		},
-		"/src/images/enemies/cyclop/Cyclop_Idle_03.png": {
-			"sdcard": false
-		},
-		"/xxx.gif": {
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F5.h": {
 			"sdcard": false
 		}
 	},
