--- a/project.json
+++ b/project.json
@@ -10660,6 +10660,261 @@
 		},
 		"/src/images/title/Resume.h": {
 			"sdcard": false
+		},
+		"\\ezgif-6-bc0faa5aa888.gif": {
+			"sdcard": false
+		},
+		"\\yyy.gif": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_00.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_01.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_00.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_02.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_01.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_02.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_03.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_03.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_04.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_04.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_06.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_05.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_05.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_06.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_07.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_07.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_08.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_09.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_08.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\bullets\\Spark_09.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder": {
+			"sdcard": false
+		},
+		"\\src\\images\\title\\Resume.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\title\\Resume.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_00_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_00_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_02_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_04_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_06_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_02_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_04_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_06_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F2.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F3.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F2.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F4.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F3.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F4.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F5.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\bull\\Bull_Dung_F5.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_02_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_02_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_02_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_02_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_06_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_06_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_06_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_06_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F2.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_00_F2.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F2.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F2.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_02_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F2.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_04_F2.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F0.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F1.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F2.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\cyclop\\Cyclop_Hitting_06_F2.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_00_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_00_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_02_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_04_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_06_F0.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_02_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_06_F1.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\enemies\\beholder\\Beholder_04_F1.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
